src/objects/Order_Writes__c.object
<CustomObject>
    <fields>
        <fullName>Customer_Order_Date__c</fullName>
        <label>Customer Order Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Dealer__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Dealer</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Dealer Order Writes</relationshipLabel>
        <relationshipName>Order_Writes1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Expected_Delivery_Date__c</fullName>
        <label>Expected Delivery Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Order_Write_Status__c</fullName>
        <description>Status of the Order Write</description>
        <label>Order Write Status</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Organisation__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Organisation</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Customer Order Writes</relationshipLabel>
        <relationshipName>Order_Writes</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Region__c</fullName>
        <formula>TEXT(Dealer__r.Region__c)</formula>
        <label>Region</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SUO_Number__c</fullName>
        <description>Single Unit Order (SUO) ID</description>
        <externalId>true</externalId>
        <label>SUO Number</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SUO_Status__c</fullName>
        <label>SUO Status</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Sales_Type__c</fullName>
        <label>Sales Type</label>
        <length>5</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Vehicle__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Vehicle</label>
        <referenceTo>Product2</referenceTo>
        <relationshipLabel>Order Writes</relationshipLabel>
        <relationshipName>Order_Writes</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>Order Writes</label>
    <listViews>
        <fullName>All</fullName>
        <columns>Dealer__c</columns>
        <columns>Organisation__c</columns>
        <columns>Vehicle__c</columns>
        <columns>Sales_Type__c</columns>
        <columns>SUO_Number__c</columns>
        <columns>SUO_Status__c</columns>
        <columns>Expected_Delivery_Date__c</columns>
        <columns>Customer_Order_Date__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>OW-{0000}</displayFormat>
        <label>Order Writes Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Order Writes</pluralLabel>
    <sharingModel>Read</sharingModel>
</CustomObject>